--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@ body {
     margin: 0;
     padding: 0;
     font-family: Arial, Helvetica, sans-serif;
-    background-image: url("/home/robin/Desktop/becode_projects/VCard/img/background.jpg");
+    background-image: url("../img/background.jpg");
     background-size: 100%;
 }
 
